Try fix accordion on IE

--- a/source/stylesheets/partials/_accordion.sass
+++ b/source/stylesheets/partials/_accordion.sass
@@ -27,6 +27,7 @@
         display: inline-block
         padding: 16px 0
         width: 98%
+        width: 96% \9
 
       .fa
         display: inline-block
